--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body {
   text-align: center;
 }
 
-h1 {
+.style {
   color: #fff;
   margin-bottom: 0.5rem;
   font-size: 1.75rem;
@@ -51,7 +51,7 @@ h1 {
 }
 
 .todo-btn {
-  background: #8758ff;
+  background: #5737a7;
   color: #fff;
   border: none;
   padding: 0.55rem;
@@ -81,3 +81,12 @@ h1 {
   text-decoration: line-through;
 }
  
+body {
+  background: linear-gradient(to right, rgb(173, 83, 137), rgb(60, 16, 83));
+}
+
+.icons-container {
+  display: flex; /* Optional: Use flexbox to align icons horizontally */
+  justify-content: space-between; /* Optional: Add space between icons */
+  margin-top: 8px; /* Example margin */
+}
